// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutAppBar should allow props to be passed to the SkipToMainContent component 1`] = `
<a
  class="rmd-link rmd-link rmd-link--skip rmd-link--skip-styled custom-link-class"
  href="#"
  id="skip-to-main"
>
  Main
</a>
`;

exports[`LayoutAppBar should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<header
  class="rmd-app-bar rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--elevated rmd-app-bar--scrollbar-offset rmd-background-container rmd-primary-container rmd-full-width"
  id="layout-header-:r0:"
>
  <a
    class="rmd-link rmd-link rmd-link--skip rmd-link--skip-styled"
    href="#"
    id="skip-to-main"
  >
    Skip to main content
  </a>
  Content
</header>
`;

exports[`LayoutAppBar should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<header
  class="rmd-app-bar rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--elevated rmd-app-bar--scrollbar-offset rmd-background-container rmd-primary-container rmd-full-width custom-class-name"
  id="layout-header-:r0:"
  style="color: white;"
>
  <a
    class="rmd-link rmd-link rmd-link--skip rmd-link--skip-styled"
    href="#"
    id="skip-to-main"
  >
    Skip to main content
  </a>
  Content
</header>
`;

exports[`LayoutAppBar should apply the correct styling, HTMLAttributes, and allow a ref 3`] = `
<header
  class="rmd-app-bar rmd-app-bar--fixed rmd-app-bar--sticky rmd-app-bar--top rmd-app-bar--elevated rmd-background-container rmd-primary-container rmd-full-width"
  id="layout-header-:r0:"
  style=""
>
  <a
    class="rmd-link rmd-link rmd-link--skip rmd-link--skip-styled"
    href="#"
    id="skip-to-main"
  >
    Skip to main content
  </a>
  Content
</header>
`;

exports[`LayoutAppBar should apply the correct styling, HTMLAttributes, and allow a ref 4`] = `
<div
  class="rmd-app-bar rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--elevated rmd-app-bar--scrollbar-offset rmd-background-container rmd-primary-container rmd-full-width"
  data-testid="div"
  id="layout-header-:r0:"
>
  <a
    class="rmd-link rmd-link rmd-link--skip rmd-link--skip-styled"
    href="#"
    id="skip-to-main"
  >
    Skip to main content
  </a>
  Content
</div>
`;
